--- a/src/assets/Card.scss
+++ b/src/assets/Card.scss
@@ -3,11 +3,14 @@
   background-color: #eff5f5;
   font-size: 15px;
   margin-bottom: 10px;
-  cursor: pointer;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+
+  span {
+    cursor: pointer;
+  }
 
   svg {
     color: #000;
