--- a/src/assets/CButton.scss
+++ b/src/assets/CButton.scss
@@ -5,23 +5,24 @@ $dark: rgba(
 
 .btn-primary,
 .btn {
-  background-color: $dark !important;
+  background-color: $dark;
   color: #fff;
   border-radius: 0;
   outline: 0;
   border: 0 !important;
-  display: block;
-  width: 100%;
   padding: 5px 10px;
   font-size: 15px;
   border-radius: 5px;
 
+  // full width button
+  &.btn-full {
+    display: block;
+    width: 100%;
+  }
+
   &:hover,
   &:focus {
-    background-color: rgba(
-      $color: $dark,
-      $alpha: 0.8
-    ) !important;
+    background-color: rgba($color: $dark, $alpha: 0.8);
     color: #fff !important;
   }
 }
